# poi_gsid

./: .gitignore  LICENSE  README.md  embedding_training.py  main.py  plan.md  pyproject.toml  rqvae_training.py
dataset/: data_preprocess.py  embedding_dataset.py  poi_dataloader.py
dataset/id_pois/: sample500_preprocessed.csv  sample500_raw.csv
embedding/: inference.py  layers.py  trainer.py
evaluations/: embedding_eval.py
preprcess/: data_preprocess.py
rqvae/: inference.py  layers.py  trainer.py
